tests/NormalTests/paczka1/fuzzy1/71045854.err
Error in line 5: S5 S847 60,9
Error in line 6: JGhM A38 74,6
Error in line 8: JGhM S5 20,5
Error in line 14: S5 S847 49,9
Error in line 15: tUpg S5 50,3
Error in line 18: 36gK A908 171,2
Error in line 35: ieKiobjot S847 61,4
